Closed Bug 936196 Opened 11 years ago Closed 11 years ago

gfx/thebes/gfxPlatform.cpp:333:80: error: 'getpid' was not declared in this scope

Categories

(Core :: Graphics, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla28

People

(Reporter: b1060552, Unassigned)

References

Details

Attachments

(1 file)

gfx/thebes/gfxPlatform.cpp:333:73: error:
      use of undeclared identifier 'getpid'
      fileName.AppendPrintf("moz2drec_%i_%i.aer", XRE_GetProcessType(), getpid());
                                                                        ^
1 error generated.
It comes from zconf.h<-zlib.h<-gfxFontUtils.h<-gfxPlatformFontList.h:

  #ifndef Z_SOLO
  #  if defined(Z_HAVE_UNISTD_H) || defined(_LARGEFILE64_SOURCE)
  #    include <unistd.h>         /* for SEEK_*, off_t, and _LFS64_LARGEFILE */
  #    ifdef VMS
  #      include <unixio.h>       /* for off_t */
  #    endif
  #    ifndef z_off_t
  #      define z_off_t off_t
  #    endif
  #  endif
  #endif
Attachment #828907 - Flags: review?(bgirard)
Blocks: 935701
Attachment #828907 - Flags: review?(bgirard) → review+
Status: UNCONFIRMED → NEW
Ever confirmed: true
Keywords: checkin-needed
https://hg.mozilla.org/mozilla-central/rev/049abc9d88a1
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla28
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: