Bug 936196 - Explicitly include unistd.h for getpid() on XP_UNIX. r=BenWa