gfx/thebes/gfxPlatform.cpp
@@ -18,6 +18,8 @@
 #ifdef XP_WIN
 #include <process.h>
 #define getpid _getpid
+#else
+#include <unistd.h>
 #endif
 
 #include "nsXULAppAPI.h"
